# PicotinTracker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: discord-test.yml  picotin-monitor.yml  schedule-smoke.yml
src/picotin_monitor/: __init__.py  cache.py  cli.py  config.py  models.py  monitor.py  notifiers.py  rules.py
tests/: test_rules.py
